# glxml-old

./: .gitignore  Makefile.in  configure.ac  glxml.pc.in
src/advanced/: AdvancedFactory.hpp  Boolean.hpp  BooleanXor.cpp  BooleanXor.hpp  Choose.hpp  Clear.hpp  Clone.hpp  Cull.hpp  Renderbuffer.cpp  Renderbuffer.hpp  Sort.cpp  Sort.hpp  Target.hpp  UniformFloatArray.hpp
src/advanced/appearance/: Shadow.hpp
src/advanced/geometry/: BooleanAnd.cpp  Calculator.cpp
src/advanced/offscreen/: Attachment.hpp  Bind.hpp  Outputs.hpp  Screen.hpp
src/advanced/organize/: Branch.hpp  Placeholder.hpp  Replica.hpp
src/appearance/: Blend.hpp  Clear.hpp  Light.cpp  Wireframe.hpp
src/basic/: Box.hpp  Cone.hpp  Cube.hpp  Disk.cpp  Group.hpp  Hexahedron.hpp  Light.hpp  Line.hpp  Program.hpp  Rotate.cpp  Rotate.hpp  Scale.cpp  Scale.hpp  Shader.cpp  Shader.hpp  SimpleDrawable.hpp  SimpleTransformable.cpp  SimpleTransformable.hpp  Square.hpp  Texture.cpp  Translate.cpp  Translate.hpp
src/basic/geometry/: Cone.cpp  Disk.hpp  Hexahedron.cpp  SimpleTransformable.hpp
src/basic/organize/: Instance.hpp
src/basic/transform/: Rotate.hpp
src/core/: Factory.cpp  Factory.hpp  Identifiable.cpp  Identifiable.hpp  Node.cpp  Node.hpp  NodeEvent.cpp  NodeEvent.hpp  NodeException.cpp  NodeException.hpp  NodeInterfaces.cpp  NodeInterfaces.hpp  Resources.cpp  Resources.hpp  Scene.cpp  Scene.hpp  Scout.hpp  Selection.cpp  Selection.hpp  SubsceneUser.cpp  SubsceneUser.hpp  Suppressor.cpp  Suppressor.hpp  Tester.cpp  Traverser.cpp  Traverser.hpp
src/factories/: AppearanceFactory.cpp  AppearanceFactory.hpp  BasicFactory.cpp  BasicFactory.hpp  GeometryFactory.cpp  GeometryFactory.hpp  OffscreenFactory.cpp  OffscreenFactory.hpp  OrganizeFactory.cpp  OrganizeFactory.hpp  ShaderFactory.cpp  ShaderFactory.hpp  ShadingFactory.cpp  ShadingFactory.hpp  TransformFactory.cpp  TransformFactory.hpp
src/geometry/: Boolean.cpp  BooleanAnd.hpp  Calculator.hpp  Cube.cpp
src/nodes/appearance/: Clear.cpp  Depth.hpp  Shadow.cpp  Texture.hpp
src/nodes/basic/: Blend.cpp  Blend.hpp  Clear.cpp  Clear.hpp  Cull.cpp  Cull.hpp  Depth.cpp  Depth.hpp  Wireframe.cpp  Wireframe.hpp
src/nodes/geometry/: Boolean.cpp  Boolean.hpp  BooleanAnd.cpp  BooleanAnd.hpp  BooleanXor.cpp  BooleanXor.hpp  Box.cpp  Box.hpp  Calculator.cpp  Calculator.hpp  Cone.cpp  Cone.hpp  Cube.cpp  Cube.hpp  Disk.cpp  Disk.hpp  Hexahedron.cpp  Hexahedron.hpp  Line.cpp  Line.hpp  Shape.cpp  Shape.hpp  SimpleDrawable.cpp  SimpleDrawable.hpp  SimpleTransformable.cpp  SimpleTransformable.hpp  Square.cpp  Square.hpp
src/nodes/offscreen/: Attachment.cpp  Attachment.hpp  Bind.cpp  Bind.hpp  Framebuffer.cpp  Framebuffer.hpp  Fullscreen.cpp  Fullscreen.hpp  Outputs.cpp  Outputs.hpp  Renderbuffer.cpp  Renderbuffer.hpp  Screen.cpp  Screen.hpp  Target.cpp  Target.hpp
src/nodes/organize/: Branch.cpp  Branch.hpp  Choose.cpp  Choose.hpp  Clone.cpp  Clone.hpp  Group.cpp  Group.hpp  (+12 more)
src/offscreen/: Renderbuffer.hpp
src/organize/: Link.hpp
src/transform/: Scale.hpp
src/utility/: Scout.hpp  Tester.cpp  Tester.hpp
test/: .gitignore  AdvancedFactory.cxx  BasicFactory.cxx
test/advanced/: Attachment.cxx  Bind.cxx  Blend.cxx  BooleanAnd.cxx  BooleanXor.cxx  Cull.cxx  Framebuffer.cxx  Fullscreen.cxx  Sort.cxx
test/basic/: .gitignore  Cube.cxx  Disk.cxx  Shape.cxx  Square.xml  Translate.cxx  UniformMatrix.cxx  Wireframe.cxx  hello.vert
test/core/: Factory.cxx  Node.cxx  NodeEvent.cxx  NodeException.cxx  Scene.cxx  Selection.cxx  Tester.cxx  Traverser.cxx
test/geometry/: Square.cxx
test/nodes/: Tester.cxx
test/scene/: NodeException.cxx  Scene.cxx
(+69 files in other folders)
